--- a/README
+++ b/README
@@ -1,12 +1,21 @@
+OVERVIEW
+
 The purpose of this milter is to trap and redirect certain emails.  This is
 useful for a development environment, where certain emails that are sent out by
 accident, e.g. to real customers, are redirected to a developer's email address.
 
-This milter has been tested with Postfix 2.5 on Debian Linux 5.0.  It provides
-both an "smtpd" and "nonsmtpd" milter.  The type of milter that is started is
-determined through a command-line argument.
+sandbox_milter provides both an "smtpd" and "nonsmtpd" milter.  The type of
+milter that is started is determined through a command-line argument.
 
-Example Postfix configuration:
+
+PREREQUISITES
+- Python 2.5 (provided by the Debian python2.5 package)
+- Python milter (provided by the Debian python-milter package)
+
+This milter has been tested with Postfix 2.5 on Debian Linux 5.0.
+
+
+EXAMPLE POSTFIX CONFIGURATION
 
 milter_default_action = accept
 non_smtpd_milters = unix:/milter/sandbox_nonsmtpd_milter.sock
@@ -17,7 +26,8 @@ milter_protocol = 6
 that in mind when configuring the milter socket paths)
 
 
-Usage:
+USAGE
+
 sandbox_milter.py smtpd
     -or-
 sandbox_milter.py nonsmtpd
@@ -25,7 +35,8 @@ sandbox_milter.py nonsmtpd
 Output is logged to the mail.info and/or mail.debug syslog facilities
 
 
-Configuration:
+CONFIGURATION
+
 The valid_senders file contains a list of legitimate senders whose emails are
 NOT redirected IFF sent through SMTP.
 
@@ -43,7 +54,8 @@ restarted.  However, sandbox_milter.cfg changes will require sandbox_milter to
 be restarted in order for these changes to take effect.
 
 
-Rules that sandbox_milter implements:
+RULES IMPLEMENTED BY SANDBOX_MILTER
+
 Redirect email to <redirect_address> unless:
   1. Envelope sender email address is in valid_senders list AND email is sent through SMTP, or
   2. Envelope recipient email address or domain is in allowed_recipients
